# microcontroller-projects

./: README.md
feather-m4/led-lamp/: Cargo.toml
feather-m4/led-lamp/src/: main.rs  prng.rs
grand-central-m4/step-sequencer/: Cargo.toml  README.md
grand-central-m4/step-sequencer/src/: button.rs  buttonset.rs  main.rs  midi.rs
itsy-bitsy-m0/template/: Cargo.toml
itsy-bitsy-m0/template/.cargo/: config
itsy-bitsy-m0/template/src/: main.rs
rp-pico/led-lamp/: Cargo.toml
rp-pico/midi-out/: Cargo.toml  README.md
rp-pico/midi-out/src/: main.rs
rp-pico/template/: Cargo.toml  README.md
rp-pico/template/src/: main.rs
rp-pico/usb-distance-sensor/: Cargo.toml
rp-pico/usb-distance-sensor/src/: main.rs  sensor.rs
rp-pico/usb-leds/: Cargo.toml
rp-pico/usb-leds/src/: colors.rs  leds.rs  main.rs  prng.rs  sprites.rs
trinket-m0/: README.md
trinket-m0/led-lamp/: Cargo.toml  README.md
trinket-m0/led-lamp/src/: buffer.rs  main.rs  prng.rs  utilities.rs
trinket-m0/proximity-sensor/: Cargo.toml  README.md
trinket-m0/proximity-sensor/src/: buffer.rs  main.rs  sensor.rs
