[package]
name = "usb-distance-sensor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rp-pico = "0.3.0"
rp2040-boot2 = { version = "0.2.0", optional = true }
rp2040-hal = "0.4.0"
cortex-m = "0.7.2"
cortex-m-rt = { version = "0.7", optional = true }
embedded-time = "0.12.0"
embedded-hal = "0.2.5"
panic-halt = "0.2.0"
usb-device = "0.2.8"
usbd-serial = "0.1.1"
