[package]
name = "usb-leds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rp-pico = "0.9"
#rp2040-boot2 = { version = "0.3", optional = true }
rp2040-hal = "0.10"
cortex-m = "0.7"
#cortex-m-rt = { version = "0.7", optional = true }
cortex-m-rt = "0.7"
#embedded-time = "0.12.0"
#embedded-hal ="0.2.5"
embedded-hal = "1.0"
panic-halt= "0.2"
usb-device= "0.3"
usbd-serial = "0.2"
