[package]
name = "proximity-sensor"
version = "0.1.0"
authors = ["eric"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trinket_m0 = "0.8.0"
panic-halt = "0.2"

[dev-dependencies]
panic-halt = "0.2"

[dependencies.atsamd-hal]
version = "0.11"
default-features = false

[dependencies.cortex-m-rt]
version = "~0.6.12"
optional = true

[dependencies.usb-device]
version = "0.2"
optional = true

[dependencies.usbd-serial]
version = "0.1"
optional = true

[features]
# ask the HAL to enable atsamd21e support
default = ["rt", "atsamd-hal/samd21e"]
rt = ["cortex-m-rt", "atsamd-hal/samd21e-rt"]
unproven = ["atsamd-hal/unproven"]
usb = ["atsamd-hal/usb", "usb-device", "usbd-serial"]
use_semihosting = []
